--- a/scripts/azure.simple.conf
+++ b/scripts/azure.simple.conf
@@ -169,7 +169,7 @@ instances {
         #       {instanceNamePrefix}{UUID}.{region}.coudapp.azure.com
         #
 
-        publicIP: Yes
+        publicIP: No
 
         #
         # prefix for instance name and hostname for this intance type
