--- a/scripts/azure.simple.conf
+++ b/scripts/azure.simple.conf
@@ -181,6 +181,9 @@ instances {
         # Data drives. All drives will be 1 TB
         # Data drives are mounted on /data0 .. /data[n]
         # /data0 - Dedicated Log Device
+        
+        storageAccountType: "StandardLRS"
+        
         #
         # For Masters:
         # /data1 - NameNode Data
@@ -190,7 +193,9 @@ instances {
         # For Workers /data1 .. /data[n] will be used for HDFS data
         #
 
-        dataDiskCount: 1
+        dataDiskCount: 4
+        
+        dataDiskSize: 512
 
         tags {
             owner: ${?USER}
@@ -510,7 +515,9 @@ fi
         availabilitySet: asworker
         publicIP: No
         instanceNamePrefix: cdwork
-        dataDiskCount: 1
+        storageAccountType: "StandardLRS"
+        dataDiskCount: 11
+        dataDiskSize: 512
         tags {
             owner: ${?USER}
         }
@@ -814,7 +821,9 @@ fi
         availabilitySet: asedge
         publicIP: Yes
         instanceNamePrefix: cdedge
+        storageAccountType: "StandardLRS"
         dataDiskCount: 1
+        dataDiskSize: 512
         tags {
             owner: ${?USER}
         }
