--- a/scripts/azure.simple.conf
+++ b/scripts/azure.simple.conf
@@ -182,7 +182,7 @@ instances {
         # Data drives are mounted on /data0 .. /data[n]
         # /data0 - Dedicated Log Device
         
-        storageAccountType: "StandardLRS"
+        storageAccountType: "Premium_LRS"
         
         #
         # For Masters:
@@ -193,7 +193,7 @@ instances {
         # For Workers /data1 .. /data[n] will be used for HDFS data
         #
 
-        dataDiskCount: 4
+        dataDiskCount: 2
         
         dataDiskSize: 128
 
@@ -515,8 +515,8 @@ fi
         availabilitySet: asworker
         publicIP: No
         instanceNamePrefix: cdwork
-        storageAccountType: "StandardLRS"
-        dataDiskCount: 11
+        storageAccountType: "Premium_LRS"
+        dataDiskCount: 8
         dataDiskSize: 128
         tags {
             owner: ${?USER}
@@ -821,7 +821,7 @@ fi
         availabilitySet: asedge
         publicIP: Yes
         instanceNamePrefix: cdedge
-        storageAccountType: "StandardLRS"
+        storageAccountType: "Premium_LRS"
         dataDiskCount: 1
         dataDiskSize: 128
         tags {
