--- a/scripts/azure.simple.conf
+++ b/scripts/azure.simple.conf
@@ -182,7 +182,7 @@ instances {
         # Data drives are mounted on /data0 .. /data[n]
         # /data0 - Dedicated Log Device
         
-        #storageAccountType: "Premium_LRS"
+        storageAccountType: "Premium_LRS"
         
         #
         # For Masters:
@@ -195,7 +195,7 @@ instances {
 
         dataDiskCount: 2
         
-        #dataDiskSize: 128
+        dataDiskSize: 128
 
         tags {
             owner: ${?USER}
@@ -515,9 +515,9 @@ fi
         availabilitySet: asworker
         publicIP: No
         instanceNamePrefix: cdwork
-        #storageAccountType: "Premium_LRS"
+        storageAccountType: "Premium_LRS"
         dataDiskCount: 11
-        #dataDiskSize: 128
+        dataDiskSize: 128
         tags {
             owner: ${?USER}
         }
@@ -821,9 +821,9 @@ fi
         availabilitySet: asedge
         publicIP: Yes
         instanceNamePrefix: cdedge
-        #storageAccountType: "Premium_LRS"
+        storageAccountType: "Premium_LRS"
         dataDiskCount: 1
-        #dataDiskSize: 128
+        dataDiskSize: 128
         tags {
             owner: ${?USER}
         }
