--- a/scripts/azure.simple.conf
+++ b/scripts/azure.simple.conf
@@ -182,7 +182,7 @@ instances {
         # Data drives are mounted on /data0 .. /data[n]
         # /data0 - Dedicated Log Device
         
-        storageAccountType: "StandardLRS"
+        storageAccountType: "Standard_LRS"
         
         #
         # For Masters:
@@ -515,7 +515,7 @@ fi
         availabilitySet: asworker
         publicIP: No
         instanceNamePrefix: cdwork
-        storageAccountType: "StandardLRS"
+        storageAccountType: "Standard_LRS"
         dataDiskCount: 11
         dataDiskSize: 128
         tags {
@@ -821,7 +821,7 @@ fi
         availabilitySet: asedge
         publicIP: Yes
         instanceNamePrefix: cdedge
-        storageAccountType: "StandardLRS"
+        storageAccountType: "Standard_LRS"
         dataDiskCount: 1
         dataDiskSize: 128
         tags {
